[project]
name = "last-meadow-online-bot"
version = "0.1.0"
description = "Automated game bot for Last Meadow Online"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Corey Gallon" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pynput>=1.8.1",
]

[project.urls]
Repository = "https://github.com/captivus/last-meadow-online-bot"

[project.scripts]
last-meadow-online-bot = "last_meadow_online_bot.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
last_meadow_online_bot = ["templates/*.png"]
